<resources>
    <string name="app_name">Energy Consumption Monitoring</string>
    <string name="Developer_mentions">Developed By: Team Solid BSCPE</string>
    <string name="main_updateButton">Manage Energy Consumption</string>
    <string name="main_viewHistory">View Consumption Data History</string>
    <string name="main_instructionsManual">Instructions Manual</string>
    <string name="manage_updateButton">Update Energy Consumption</string>
    <string name="manage_contactsButton">Manage Contacts</string>
    <string name="title_activity_manage_contacts">manageContacts</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="calculating_for_the_rate_of_energy_per_kilowatt_hour_kwh">Calculating for the rate of energy per kilowatt hour (kwH):</string>
    <string name="total_kwh_used">Kwh_use</string>
    <string name="update_energy_consumption">Update Energy Consumption</string>
    <string name="please_refer_to_your_electric_bill">(Please refer to your electric bill)</string>
    <string name="todooo">TODO</string>
    <string name="total_bill_amount">Total bill amount</string>
    <string name="total_kwh_use">Total kwH Used:</string>
    <string name="total_bill_amount_">Total Bill Amount:</string>
    <string name="information_from_the_system">Information from the system:</string>
    <string name="enter_how_many_usersss">Enter how many users:</string>
    <string name="date_of_energy_reading">Enter Date of Energy Reading:</string>
    <string name="enter_total_amount_used">Enter Total Amount Used:</string>
    <string name="enter_total_kwh_used">Enter Total Kwh Used:</string>
    <string name="enter_date_of_energy_reading_">Enter Date Of Energy Reading:</string>
    <string name="refer_to_the_system">(Refer to the system)</string>
    <string name="enter_how_many_users_">Enter How Many Users:</string>
    <string name="input_how_many_are_the_users_of_the_system">(Input how many are the users of the system)</string>
    <string name="save">Save</string>
    <string name="todo">TODO</string>
    <string name="total_kwh_used_">Total kwh used:</string>
    <string name="total_amount_used">Total amount used:</string>
    <string name="how_many_users">Enter how many users:</string>
    <string name="enter_date_of_enery_reading">Enter date of enery reading:</string>
    <string name="enter_total_consumed_kwh">Enter total consumed kwh:</string>
    <string name="enter_total_amount_payed">Enter total amount payed:</string>
    <string name="enter_how_many_users">Enter how many users:</string>
    <string name="enter_date_of_energy_readingg">Enter date of energy reading:</string>
    <string name="enter_total_amount_usedby">Enter Total Amount Used</string>
    <string name="enter_total_kwh_consumed">Enter Total Kwh Consumed</string>
    <string name="enter_how_many_users__">Enter How Many Users</string>
    <string name="enter_date_of_energy_reading">Enter Date Of Energy Reading</string>
    <string name="enter_total_amount_used__">Enter Total Amount Used</string>
    <string name="enter_total_kwh_used__">Enter Total Kwh Used</string>
</resources>